# metric-beer-rs

./: Cargo.toml  LICENSE  index.html
src/: common.rs  data.rs  main.rs
src/components/: hourtable.rs  mod.rs  opentoday.rs
testdata/: beer.json
