[package]
name = "metric-beer-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
yew-hooks = "0.2.0"
serde = "1.0.152"
serde_json = "1.0.91"
gloo-net = "0.2.5"
log = "0.4.17"
wasm-logger = "0.2.0"
chrono = "0.4.23"

[profile.release]
lto = true
opt-level = 'z'